--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Portal</string>
+    <string name="menu_btn_refresh">Refresh</string>
+    <string name="file_intent_chooser_title">File Upload</string>
+    <string name="permission_denied_message">Without permissions granted you will not be able to upload files</string>
 </resources>
